k8s/security/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
# 1. Permitir resolución DNS (Vital para que todos los pods encuentren servicios)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
---
# 2. Permitir que Postgres reciba tráfico SOLO de la API
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ops-fitness-api
    ports:
    - protocol: TCP
      port: 5432
---
# 3. Permitir a la API salir hacia Postgres y recibir tráfico web/métricas
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-traffic
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: ops-fitness-api
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres
    ports:
    - protocol: TCP
      port: 5432
  ingress:
  - from:
    - namespaceSelector: {} # Permite tráfico de Ingress Controllers y Prometheus en otros namespaces
    ports:
    - protocol: TCP
      port: 8000 # Asegúrate de que este es el puerto interno donde escucha tu API (Django)
